--- a/style.css
+++ b/style.css
@@ -8,26 +8,38 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  padding-top: 10vh;
+}
 
 /* ============== NAVBAR STYLE START ================== */
 
 /* TOP BAR STYLE */
 #top-bar {
+  width: 100%;
   display: flex;
   justify-content: space-around;
   box-shadow: 2px 4px 2px rgba(17, 16, 16, 0.5);
   padding: 15px 0;
   min-height: 8vh;
+  margin-top: -10vh !important;
+  position: fixed;
+  z-index: 50;
+  background-color: #fff;
 }
 
 /* LOGO STYLE */
-.logo h4 {
+.logo a {
+  text-decoration: none;
+  color: #000;
+}
+.logo a h4 {
   font-size: 30px;
   font-weight: 100;
   letter-spacing: 3px;
   cursor: pointer;
 }
-.logo h4 span {
+.logo a h4 span {
   color: #009688;
   letter-spacing: 1px;
   font-weight: 1000;
@@ -116,7 +128,7 @@ html {
     position: absolute;
     right: 0;
     height: 89vh;
-    top: 11vh;
+    top: 10.4vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -145,7 +157,7 @@ html {
   body {
     overflow-x: hidden;
   }
-  .logo h4 {
+  .logo a h4 {
     font-size: 24px;
   }
   .icons i {
@@ -244,11 +256,37 @@ html {
   #features {
     flex-wrap: wrap;
   }
+  #features .img-wrapper {
+    cursor: pointer;
+    padding: 15px;
+    width: 60px;
+    height: 60px;
+  }
+  #features .img-wrapper img {
+    width: 35px;
+    height: 33px;
+  }
   #features .icon-container {
     width: 50%;
   }
   #features .icon-container h4 {
     font-size: 13px;
+  }
+  @keyframes animate {
+    0% {
+      box-shadow: 0 0 0 0 rgba(0, 150, 136, 0.7), 0 0 0 0 rgba(0, 150, 136, 0.7);
+    }
+    40% {
+      box-shadow: 0 0 0 30px rgba(0, 150, 136, 0),
+        0 0 0 0 rgba(0, 150, 136, 0.7);
+    }
+    80% {
+      box-shadow: 0 0 0 30px rgba(0, 150, 136, 0),
+        0 0 0 15px rgba(0, 150, 136, 0);
+    }
+    100% {
+      box-shadow: 0 0 0 0 rgba(0, 150, 136, 0), 0 0 0 15px rgba(0, 150, 136, 0);
+    }
   }
 }
 
@@ -627,12 +665,12 @@ footer ul li h3 {
   }
 }
 
-.order-confirm{
+.order-confirm {
   margin-top: 60px;
   margin-bottom: 60px;
   text-align: center;
 }
-.order-confirm img{
+.order-confirm img {
   height: 300px;
 }
 .order-confirm h2 {
